[package]
name = "bevy_6gon"
version = "0.1.0"
authors = ["Igal Alkon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
lyon_tessellation = "1.0.8"
bevy_prototype_lyon = "0.8.0"
hexagon_tiles = "0.2.0"
rand = "0.8.5"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
