[package]
name = "bevy_hexagon_plugin"
version = "0.1.0"
authors = ["Igal Alkon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
lyon_tessellation = "1.0.13"
bevy_prototype_lyon = "0.11.0"
hexagon_tiles = "0.2.1"
rand = "0.9.0-alpha.1"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
